bk_ida/gobmkida/c1/filllib_confirm_safety
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/filllib_confirm_safety/src/engine/filllib.c:1043:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v18 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v17); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/filllib_confirm_safety/src/obj/1/filllib.o] Error 1
